# User-Interface-Programming---VOIP-GUI

./: .gitignore  Readme.md  app.py  commands.py  file.db  models.py  pyproject.toml  requirements.txt
Templates/: contacts.html  notifications.html
static/: js.js
templates/: home.html
