[tool.poetry]
name = "user-interface-programming-voip-gui"
version = "0.1.0"
description = ""
authors = ["Daniel Paul <daniel.paul@espressif.com>"]
readme = "README.md"
packages = [{include = "user_interface_programming_voip_gui"}]

[tool.poetry.dependencies]
python = "^3.11"
blinker = "1.4"
click = "7.1.2"
flask = "1.1.2"
flask-login = "0.5.0"
flask-mail = "0.9.1"
flask-sqlalchemy = "2.4.4"
flask-wtf = "0.14.3"
gunicorn = "20.0.4"
itsdangerous = "1.1.0"
jinja2 = "2.11.2"
markupsafe = "1.1.1"
psycopg2 = "2.8.6"
pymysql = "0.10.1"
python-dateutil = "2.8.1"
pytz = "2020.4"
six = "1.15.0"
sqlalchemy = "1.3.20"
werkzeug = "1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
